[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "cryoPROS"
version = "1.2.0"
description = "CryoPROS: Correcting Misalignment Caused by Preferred Orientation Using AI-generated Auxiliary Particles."
readme = "README.md"
authors = [
    { name = "Hui Zhang", email = "zhanghui23@mails.tsinghua.edu.cn" },
    { name = "Dihan Zheng", email = "zdihan@outlook.com" },
    { name = "Qi Zhang", email = "zhangqi@smart.org.cn" },
    { name = "Mingxu Hu", email = "humingxu@smart.org.cn" },
    { name = "Chenglong Bao", email = "clbao@tsinghua.edu.cn" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["preferred orientation", "single-particle cryo-EM"]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "mrcfile>=1.3",
    "scipy>=1.6.2",
    "numpy>=1.21.5",
    "starfile==0.4.12",
    "pandas<2.2",
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[project.urls]
Homepage = "https://github.com/mxhulab/cryoPROS"

[tool.setuptools.package-data]
"cryoPROS" = ["*.pth"]
"cryoPROS.options" = ["*.json"]

[project.scripts]
cryopros-genmask = "cryoPROS.genmask:main"
cryopros-recondismic = "cryoPROS.recondismic:main"
cryopros-train = "cryoPROS.train:main"
cryopros-generate = "cryoPROS.generate:main"
