[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoPROS"
version = "1.1"
description = "CryoPROS: Correcting Misalignment Caused by Preferred Orientation Using AI-generated Auxiliary Particles."
readme = "README.md"
authors = [
    {name = "Dihan Zheng", email = "zdihan@outlook.com"}
]
license = {text = "Reserved"}
keywords = ["preferred orientation", "single-particle cryo-EM"]
dependencies = [
    "torch",
    "torchvision",
    "mrcfile>=1.3",
    "scipy>=1.6.2",
    "tqdm>=4.59",
    "numpy>=1.21.5",
    "pandas>=1.3.2",
    "opencv-python",
    "matplotlib"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/mxhulab/cryoPROS"

[tool.setuptools]
packages = ["cryoPROS", "cryoPROS.data", "cryoPROS.utils", "cryoPROS.options", "cryoPROS.models"]
include-package-data = true

[tool.setuptools.package-data]
"cryoPROS" = ["*.pth"]
"cryoPROS.options" = ["*.json"]

[project.scripts]
cryopros-gen-mask = "cryoPROS.cryopros_gen_mask:main"
cryopros-recondismic = "cryoPROS.cryopros_recondismic:main"
cryopros-train = "cryoPROS.cryopros_train:main"
cryopros-generate = "cryoPROS.cryopros_generate:main"